add_library(clever_lib STATIC
    "clever_kopt.cpp" "clever_kopt.h"
    "common.cpp" "common.h"
    "de_berg.cpp" "de_berg.h"
    "decomposition.cpp" "decomposition.h"
    "decomposition_library.cpp" "decomposition_library.h"
    "dependence_graph.cpp" "dependence_graph.h"
    "dynamic.cpp" "dynamic.h"
    "embedding.cpp" "embedding.h"
    "gain_func.cpp" "gain_func.h"
    "graph.cpp" "graph.h"
    "fast_embedding.cpp" "fast_embedding.h"
    "identifier.h"
    "matching.cpp" "matching.h"
    "monotonic_sequence.cpp" "monotonic_sequence.h"
    "naive_kopt.cpp" "naive_kopt.h"
    "new_naive.cpp" "new_naive.h"
    "permutation.cpp" "permutation.h"
    "retrieve_solution.cpp" "retrieve_solution.h"
    "set.h"
    "slow_embedding.cpp" "slow_embedding.h"
)
